--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: start;
   min-width: 320px;
   min-height: 100vh;
   width: 100%;
