--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -26,5 +32,9 @@ body {
   justify-content: start;
   min-width: 320px;
   min-height: 100vh;
+  width: 100%;
+}
+
+#root {
   width: 100%;
 }
