--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,11 @@ body {
 #root {
   width: 100%;
 }
+
+dialog {
+  margin: auto auto;
+  padding: 300px 100px;
+  border: 0;
+  border-radius: 6px;
+  box-shadow: 17px 23px 104px -30px rgba(0,0,0,0.72);
+}
