--- a/src/pages/DailyTasks/DailyTasks.css
+++ b/src/pages/DailyTasks/DailyTasks.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .task-list-container {
@@ -30,4 +32,10 @@
     width: 50%;
     align-items: center;
     background-color: aliceblue;
+}
+
+.task-item > * {
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 0;
 }
