--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   color: #000;
   background-color: #F3F8FF;
 
-  --light-1: #F3F8FF;
+  --light-1: #F9F5F6;
   --light-2: #E26EE5;
   --dark-1: #7E30E1;
   --dark-2: #49108B;
@@ -39,10 +39,13 @@ body {
   width: 100%;
 }
 
+.shadow {
+  box-shadow: 17px 23px 104px -30px rgba(0,0,0,0.72);
+}
+
 dialog {
   margin: auto auto;
   padding: 50px 100px;
   border: 0;
   border-radius: 6px;
-  box-shadow: 17px 23px 104px -30px rgba(0,0,0,0.72);
 }
