--- a/src/pages/DailyTasks/DailyTasks.css
+++ b/src/pages/DailyTasks/DailyTasks.css
@@ -5,9 +5,29 @@
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    padding-top: 30px;
+    /* margin-top: 80px; */
+    padding-top: 50px;
     padding-bottom: 30px;
-    gap: 15px;
+    gap: 30px;
+    /* background-color: var(--light-2); */
+}
+
+.daily-tasks-title, .daily-tasks-subtitle {
+    width: 50%;
+}
+
+.daily-tasks-title {
+    font-size: xx-large;
+    font-weight: 600;
+}
+
+.daily-tasks-subtitle {
+    font-size: larger;
+    font-weight: 500;
+    border-bottom: 1px solid #a7a7a7;
+    padding-bottom: 2px;
+    margin-bottom: 8px;
+    /* text-transform: uppercase; */
 }
 
 .task-list-container {
