--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,14 @@ body {
 }
 
 .shadow {
-  box-shadow: 17px 23px 104px -30px rgba(0,0,0,0.72);
+  /* box-shadow: 17px 23px 104px -30px rgba(0,0,0,0.72); */
+  box-shadow:
+      0 1px 1px hsl(0deg 0% 0% / 0.075),
+      0 2px 2px hsl(0deg 0% 0% / 0.075),
+      0 4px 4px hsl(0deg 0% 0% / 0.075),
+      0 8px 8px hsl(0deg 0% 0% / 0.075),
+      0 16px 16px hsl(0deg 0% 0% / 0.075)
+    ;
 }
 
 dialog {
@@ -54,4 +61,8 @@ dialog {
   padding: 50px 100px;
   border: 0;
   border-radius: 6px;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.2);
 }
