--- a/src/pages/DailyTasks/DailyTasks.css
+++ b/src/pages/DailyTasks/DailyTasks.css
@@ -44,6 +44,9 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    gap: 15px;
+    /* background-color: green; */
+    z-index: 1;
 }
 
 .task-item {
@@ -52,7 +55,11 @@
     justify-content: space-between;
     width: 50%;
     align-items: center;
-    background-color: aliceblue;
+    background-color:#fff;
+    padding: 6px 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    border-radius: 2px;
+    /* border-left: 4px solid green; */
 }
 
 .task-item > * {
