feat: add optional font

--- a/src/pages/DailyTasks/DailyTasks.css
+++ b/src/pages/DailyTasks/DailyTasks.css
@@ -24,7 +24,7 @@
 .daily-tasks-subtitle {
     font-size: larger;
     font-weight: 500;
-    border-bottom: 1px solid #a7a7a7;
+    border-bottom: 1px solid #bbb;
     padding-bottom: 2px;
     margin-bottom: 8px;
     /* text-transform: uppercase; */
