--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,22 @@ body {
   width: 100%;
 }
 
+#navbar {
+  /* background-color: var(--light-2); */
+  display: flex;
+  justify-content: center;
+  padding: 0 500px;
+  gap: 20px;
+}
+
+#navbar > * {
+  /* background-color: white; */
+  flex: 1;
+  display: flex;
+  place-content: center;
+  padding: 20px 0;
+}
+
 #root {
   width: 100%;
 }
