--- a/src/index.css
+++ b/src/index.css
@@ -48,16 +48,27 @@ body {
   /* background-color: var(--light-2); */
   display: flex;
   justify-content: center;
-  padding: 0 500px;
-  gap: 20px;
+  padding: 0 550px;
 }
 
-#navbar > * {
+.navbar-item {
   /* background-color: white; */
   flex: 1;
   display: flex;
   place-content: center;
-  padding: 20px 0;
+  padding: 15px 0;
+  color: #000;
+  text-decoration: none;
+  transition: color 150ms ease, background-color 150ms ease;
+}
+
+.navbar-item.active {
+  border-bottom: 4px solid var(--dark-1);
+}
+
+.navbar-item:hover {
+  background-color: var(--dark-1);
+  color: white;
 }
 
 #root {
