--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,9 @@ dialog {
 dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.2);
 }
+
+.title {
+  font-size: xx-large;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
