--- a/src/components/Navbar/DesktopNavbar.css
+++ b/src/components/Navbar/DesktopNavbar.css
@@ -1,8 +1,25 @@
-#navbar {
-    /* background-color: var(--light-2); */
+.desktop-navbar-wrapper {
     display: flex;
     justify-content: center;
-    padding: 0 35vw;
+    align-items: center;
+    position: relative;
+    /* background-color: aqua; */
+}
+
+.desktop-navbar {
+    display: flex;
+    justify-content: center;
+    width: 30%;
+}
+
+
+.desktop-navbar-logo {
+    position: absolute;
+    left: 2.5rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
   
 .navbar-item {
@@ -24,4 +41,10 @@
 .navbar-item:hover {
     /* background-color: var(--dark-1); */
     color: var(--dark-2);
+}
+
+@media only screen and (max-width: 600px) {
+    .desktop-navbar-wrapper {
+      display: none;
+    }
 }
