--- a/src/pages/DailyTasks/DailyTasks.css
+++ b/src/pages/DailyTasks/DailyTasks.css
@@ -72,3 +72,9 @@
     width: 100%;
     margin-bottom: 0;
 } 
+
+@media only screen and (max-width: 600px) {
+    .task-item, .daily-tasks-subtitle {
+        width: 90%;
+    }
+}
