--- a/src/components/Navbar/MobileNavbar.css
+++ b/src/components/Navbar/MobileNavbar.css
@@ -41,7 +41,8 @@
     /* height: 100%; */
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
+    transform: translateX(150%);
     width: 100%;
     min-height: 100vh;
     z-index: 9;
@@ -49,11 +50,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    display: none;
+    display: flex;
+    opacity: 0;
+    /* display: none; */
+    transition: all 350ms ease;
 }
 
 .hamburger-menu.visible {
-    display: flex;
+    transform: translateX(0);
+    opacity: 1;
 }
 
 .mobile-navbar-item {
