--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -42,6 +46,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   width: 100%;
+  position: relative;
 }
 
 #root {
