--- a/src/pages/DailyTasks/DailyTasks.css
+++ b/src/pages/DailyTasks/DailyTasks.css
@@ -52,7 +52,7 @@
     width: 50%;
     align-items: center;
     background-color:#fff;
-    padding: 6px 10px;
+    padding: 8px 14px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     border-radius: 2px;
 }
@@ -67,11 +67,42 @@
     flex-basis: 0;
 }
 
+.task-item.completed {
+    color: #757575;
+}
+
+.task-item.completed .task-item-title {
+    text-decoration: line-through;
+}
+
 .task-title-input {
     border: none;
     width: 100%;
     margin-bottom: 0;
 } 
+
+.button-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.complete-task-button {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: 1px solid #717171;
+    color: #717171;
+    background-color: white;
+    transition: border-color 0.12s ease-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.complete-task-button:hover {
+    /* border-color: #333; */
+    cursor: pointer;
+}
 
 @media only screen and (max-width: 600px) {
     .task-item, .daily-tasks-subtitle {
