feat: more styling

--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,8 @@ body {
 }
 
 dialog {
-  margin: auto auto;
+  margin: 0 auto;
+  margin-top: 20vh;
   padding: 30px 70px;
   border: 0;
   border-radius: 6px;
@@ -81,7 +82,7 @@ dialog::backdrop {
   /* margin-bottom: 15px; */
 }
 
-input {
+input, button, select {
   font-family: inherit;
 }
 
