--- a/src/pages/Time/Time.css
+++ b/src/pages/Time/Time.css
@@ -1,9 +1,32 @@
 .time-wrapper {
-    width: 80%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
     padding-top: 15px;
     padding-bottom: 30px;
+}
+
+.dashboard {
+    /* background-color: red; */
+    margin-top: 20px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+}
+
+.dashboard > * {
+    /* background-color: pink; */
+    width: 100%;
+}
+
+.chart-container {
+    background-color: white;
+    padding: 20px 0;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
