--- a/src/index.css
+++ b/src/index.css
@@ -70,10 +70,26 @@ dialog {
   padding: 30px 70px;
   border: 0;
   border-radius: 6px;
+  position: relative;
 }
 
 dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+.close-modal-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  place-content: center;
+  border: none;
+  background-color: transparent;
+  color: #c70000;
+}
+
+.close-modal-button:hover {
+  cursor: pointer;
 }
 
 .title {
@@ -89,3 +105,17 @@ input, button, select {
 .hidden {
   display: none;
 }
+
+.btn {
+  /* background-color: var(--dark-2); */
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.2s;
+}
+
+.btn:hover {
+  /* background-color: var(--dark-1); */
+  cursor: pointer;
+} 
