--- a/src/pages/DailyTasks/DailyTasks.css
+++ b/src/pages/DailyTasks/DailyTasks.css
@@ -109,3 +109,56 @@
         width: 90%;
     }
 }
+
+.report-hours-form {
+    /* background-color: green; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.report-hours-form .input-container {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+.report-hours-form input {
+    font-size: 1em;
+    max-width: 100px;
+    padding: 3px 6px;
+    border: 1px solid #63636361;
+    border-radius: 3px;
+}
+
+.report-hours-form input:focus {
+    outline: none;
+}
+
+.report-hours-form button {
+    background-color: var(--dark-2);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.2s;
+}
+
+.report-hours-form button:hover {
+    background-color: var(--dark-1);
+    cursor: pointer;
+}
+
+.delete-task-button {
+    background-color: #c70000;
+}
+
+.delete-task-button:hover {
+    background-color: red;
+}
+
+.delete-task-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 14px;
+}
