--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -64,33 +64,7 @@ body {
     ;
 }
 
-dialog {
-  margin: 0 auto;
-  margin-top: 20vh;
-  padding: 30px 70px;
-  border: 0;
-  border-radius: 6px;
-  position: relative;
-}
 
-dialog::backdrop {
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.close-modal-button {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  display: flex;
-  place-content: center;
-  border: none;
-  background-color: transparent;
-  color: #c70000;
-}
-
-.close-modal-button:hover {
-  cursor: pointer;
-}
 
 .title {
   font-size: xx-large;
@@ -98,24 +72,10 @@ dialog::backdrop {
   /* margin-bottom: 15px; */
 }
 
-input, button, select {
-  font-family: inherit;
-}
-
 .hidden {
   display: none;
 }
 
-.btn {
-  /* background-color: var(--dark-2); */
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 5px;
-  transition: background-color 0.2s;
+.no-outline:focus {
+  outline: none;
 }
-
-.btn:hover {
-  /* background-color: var(--dark-1); */
-  cursor: pointer;
-} 
